# Markov

./: CMakeLists.txt  MarkovGenerator.py  MarkovTrainer.py  README.md
MODELS/: matrix.txt
datasets/: EN_dataset.txt  IT_dataset.txt
libs/: Algebra.h  AlgebraExcepts.h
src/: Algebra.cpp
